# swift-mind

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  supabase.sql
.cursor/rules/: backend-fastapi-standards.mdc  docs-sync.mdc  frontend-nextjs-standards.mdc  mini-rag-core.mdc  package-management-cn-uv-npm.mdc  supabase-schema-rls.mdc
backend/app/: main.py
backend/app/api/: chat.py  conversations.py  documents.py  ingest.py  ingest_options.py  kb.py
backend/app/config/: ingest_options.yaml
backend/app/core/: auth.py  config.py
backend/app/infra/embeddings/: siliconflow.py
backend/app/infra/llms/: deepseek.py
backend/app/infra/parsing/: base.py  csv_reader.py  docx_reader.py  excel_reader.py  html_reader.py  markdown_reader.py  pdfplumber_reader.py  (+3 more)
backend/app/services/: chat_service.py  citations.py  document_service.py  ingestion_service.py  kb_service.py
backend/app/utils/: data_stream.py
backend/tests/: test_citations.py  test_conversation_title_generate.py  test_data_stream.py  test_ingest_registries.py
docs/superpowers/plans/: 2026-04-16-chat-title-mobile-theme.md  2026-04-16-citations.md
docs/superpowers/specs/: 2026-04-16-chat-title-mobile-theme-design.md  2026-04-16-citations-design.md  2026-04-23-ingest-multi-format-design.md
frontend/: README.md  middleware.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-conversations.ts  use-documents.ts  use-ingest-options.ts  use-kb-ingest-config.ts  use-knowledge-bases.ts  use-rag-chat.ts
frontend/src/lib/: env.ts  http.ts
(+55 files in other folders)
