[project]
name = "mini-rag-backend"
version = "0.1.0"
description = "RAG backend (FastAPI + LlamaIndex + Supabase) with HTTP-only model calls."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "llama-index-core>=0.11",
  "llama-index-vector-stores-supabase>=0.2",
  "llama-index-llms-openai>=0.2",
  "llama-index-embeddings-openai>=0.2",
  "supabase>=2.6",
  "python-dotenv>=1.0",
  "pymupdf>=1.24",
]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

